Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58779

[Reg 5.7.1->5.8.0][macOS] QWebEngineView scroll broken with touchpad

XMLWordPrintable

    • macOS
    • 6fe967c4b0abaffccb4301f7167b08916da4d80f, 742713cfa (134-based-refactor)

      The issue reproduces only with Mac touchpad (either external or with the Macbook touchpad). Initially the scroll works fine but after quickly scrolling page down and then trying to scroll either up or down the scroll starts to crawl and works really slow. This makes the page scrolling totally unusable.

      Steps to reproduce the issue:
      1. Run attached test application
      2. Quickly scroll down
      3. Once the previous scroll event has ended scroll either up or down

      Expected outcome:
      Scroll continues to work as smoothly as initially

      Actual outcome:
      Scroll basically stops working and the page is scrolled very slowly and only a small bit with one scroll event.

      Reproduces at least on:

      • macOS 10.11
      • macOs 10.12

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            kileppal Kimmo Leppälä
            Votes:
            6 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes